--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,5 @@ spring.datasource.url=jdbc:postgresql://localhost:5433/db_primecell
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+api.security.toker.secret=mysecretkeyfromsprings
