--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,10 @@
-spring.application.name=back-end
+# Conexão com o banco
+spring.datasource.url=${DATABASE_URL}
+spring.datasource.username=${DATABASE_USERNAME}
+spring.datasource.password=${DATABASE_PASSWORD}
 
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.username=postgres
-spring.datasource.password=3132
-spring.datasource.url=jdbc:postgresql://localhost:5433/db_primecell
-spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+# Porta do servidor (opcional, já que está no .env)
+server.port=${SERVER_PORT}
 
-api.security.token.secret=12345678
+# Chave secreta da API
+api.secret=${API_SECRET}
