--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,8 @@ services:
       - DATABASE_USERNAME=${DATABASE_USERNAME}
       - DATABASE_PASSWORD=${DATABASE_PASSWORD}
       - API_SECRET=${API_SECRET}
+    volumes:
+      - ./src:/app/src  # Monta o código-fonte como volume
 
   db:
     image: postgres:13
