fix: docker e Upload de imagens

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,9 @@ version: '3.8'
 
 services:
   app:
-    build: .
+    build:
+      context: .
+      dockerfile: Dockerfile
     ports:
       - "${SERVER_PORT}:8080"
     depends_on:
@@ -10,12 +12,20 @@ services:
     env_file:
       - .env
     volumes:
-      - ./src:/app/src  # Monta o código-fonte como volume
+      - ./:/app  # Monta todo o diretório do projeto
+      - maven-repo:/root/.m2  # Cache do Maven
+      - ./uploads:/app/uploads  # Volume persistente para imagens
+    environment:
+      - SPRING_DEVTOOLS_RESTART_ENABLED=true
+      - SPRING_DEVTOOLS_LIVERELOAD_ENABLED=true
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://db:5432/${POSTGRES_DB}
+      - SPRING_DATASOURCE_USERNAME=${POSTGRES_USER}
+      - SPRING_DATASOURCE_PASSWORD=${POSTGRES_PASSWORD}
 
   db:
     image: postgres:13
     ports:
-      - "5432:5432"  # Alterado para 5434
+      - "5432:5432"
     env_file:
       - .env
     volumes:
@@ -23,3 +33,4 @@ services:
 
 volumes:
   postgres_data:
+  maven-repo:  # Volume para o cache do Maven
